--- a/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.html
+++ b/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.html
@@ -1,1 +1,7 @@
-<p>molen-dialog works!</p>
+<h1 mat-dialog-title>Dialog Title</h1>
+<div mat-dialog-content>
+  <p>{{ data.tenBruggeNr }}</p>
+</div>
+<div mat-dialog-actions>
+  <button mat-button (click)="onClose()">Close</button>
+</div>
