--- a/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.html
+++ b/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.html
@@ -1,7 +1,24 @@
-<h1 mat-dialog-title>Dialog Title</h1>
+<!--<h1 mat-dialog-title>Dialog Title</h1>
 <div mat-dialog-content>
   <p>{{ data.tenBruggeNr }}</p>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onClose()">Close</button>
+
+</div>-->
+<div class="molen-data" *ngIf="molen">
+  <h2>{{ molen.name }}</h2>
+  <p><strong>Type:</strong> {{ molen.functie }}</p>
+  <p><strong>Ten Brugge Nr:</strong> {{ molen.ten_Brugge_Nr }}</p>
+  <p><strong>Plaats:</strong> {{ molen.plaats }}</p>
+  <p><strong>Adres:</strong> {{ molen.adres }}</p>
+  <p><strong>Coordinates:</strong> (North: {{ molen.north }}, East: {{ molen.east }})</p>
+  <p><strong>Bouwjaar:</strong> {{ molen.getBouwjaar }}</p>
+  
+  <h3>Model Types:</h3>
+  <ul>
+    <li *ngFor="let model of molen.modelType">
+      {{ model.name }} <!-- Adjust this if MolenType has specific properties to display -->
+    </li>
+  </ul>
 </div>
