--- a/molenapplicatie.client/src/styles.css
+++ b/molenapplicatie.client/src/styles.css
@@ -2,3 +2,11 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.cdk-overlay-pane.mat-mdc-dialog-panel {
+  max-width: 90vw !important;
+  max-height: 75vw !important; 
+  /*width: 600px;*/ 
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
