--- a/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.css
+++ b/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.css
@@ -1,41 +1,68 @@
-/*.molen-data {
-  border: 1px solid #ccc;
-  padding: 16px;
-  margin: 16px 0;
-  border-radius: 4px;
-  background-color: #f9f9f9;
-}
-
-.molen-data h2 {
-  margin-top: 0;
+.header {
+  border-bottom: 1px solid black;
+  font-size: 30px;
+  padding: 8px 20px 8px 20px;
+  font-weight:500;
 }
 
 .molenImage {
-    height:350px;
-    margin:auto;
-}*/
-
-.container {
-  width: 80vh;
-  display: flex;
-  justify-content: space-between;
+  border-radius: var(--mdc-dialog-container-shape, var(--mat-app-corner-extra-large, 4px));
 }
 
-.data-left, .data-right {
+.container {
+  max-width:100vw;
+  display: flex;
+  height:90vh;
+}
+.data-left {
+  width: 30%;
+  padding: 10px;
+}
+.data-right {
   width: 40%;
   padding: 10px;
 }
 
 .molen-data {
-  width: 60%;
+  width: 40%;
   padding: 10px;
 }
 
 .molenImage {
   max-width: 100%;
-  height: auto;
+  height:75%;
 }
 
 .image-selector {
   margin-top: 20px;
+}
+
+.image-preview img{
+    width:auto;
+}
+
+.close-btn {
+  border: none;
+  color: white;
+  padding: 0px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 40px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  background-color: white;
+  color: red;
+  border: 2px solid #f44336;
+  border-radius:100%;
+  float:right;
+}
+
+.close-btn:hover {
+  background-color: #f44336;
+  color: white;
+}
+
+input{
+    width:100%;
 }
