--- a/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.css
+++ b/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.css
@@ -2,7 +2,7 @@
   border-bottom: 1px solid black;
   font-size: 30px;
   padding: 8px 20px 8px 20px;
-  font-weight:500;
+  font-weight: 500;
 }
 
 .molenImage {
@@ -10,14 +10,16 @@
 }
 
 .container {
-  max-width:100vw;
+  max-width: 100vw;
   display: flex;
-  height:90vh;
+  height: 90vh;
 }
+
 .data-left {
   width: 30%;
   padding: 10px;
 }
+
 .data-right {
   width: 40%;
   padding: 10px;
@@ -30,15 +32,30 @@
 
 .molenImage {
   max-width: 100%;
-  height:75%;
+  height: 75%;
 }
 
 .image-selector {
   margin-top: 20px;
 }
 
-.image-preview img{
-    width:auto;
+.image-preview {
+  margin-bottom:10px;
+  border:1px solid grey;
+  border-radius:10px;
+  padding:2px;
+}
+
+.image-preview span{
+    font-size:20px;
+    font-weight:500;
+}
+
+.image-preview img {
+  display: block;
+  margin: 0 auto;
+  max-width: 70%;
+  width: auto;
 }
 
 .close-btn {
@@ -54,15 +71,15 @@
   background-color: white;
   color: red;
   border: 2px solid #f44336;
-  border-radius:100%;
-  float:right;
+  border-radius: 100%;
+  float: right;
 }
 
-.close-btn:hover {
-  background-color: #f44336;
-  color: white;
-}
+  .close-btn:hover {
+    background-color: #f44336;
+    color: white;
+  }
 
-input{
-    width:100%;
+.file-input {
+  width: 100%;
 }
