--- a/molenapplicatie.client/src/app/map/map.component.css
+++ b/molenapplicatie.client/src/app/map/map.component.css
@@ -3,6 +3,7 @@
     height:100%;
 }
 #map{
-    height:100% !important;
-    width:100% !important;
+    margin:auto;
+    height:100%;
+    width:100%;
 }
