--- a/molenapplicatie.client/src/app/image-selector/image-selector.component.css
+++ b/molenapplicatie.client/src/app/image-selector/image-selector.component.css
@@ -6,18 +6,30 @@
 
 .main-image {
   margin-bottom: 16px;
+  height: 80%;
 }
 
 .main-image img {
-  max-width: 100%;
+  width: 100%;
   height: auto;
-  border: 2px solid #ccc;
+  max-height: 85vh;
+  padding:2px;
+  cursor:pointer;
 }
+
+  .main-image img:hover {
+    /*  border: 2px solid gray;*/
+    border: 1px solid transparent; /* Optional: for an inner border */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* X-offset, Y-offset, blur-radius, spread-radius, color */
+    /*padding: 10px;*/
+    padding: 1px;
+  }
 
 .thumbnail-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  height: fit-content;
 }
 
 .thumbnail {
@@ -26,13 +38,13 @@
   transition: transform 0.3s;
 }
 
-  .thumbnail img {
-    width: 100px;
-    height: auto;
-    border: 2px solid transparent;
-  }
+.thumbnail img {
+  width: 30px;
+  height: auto;
+  border: 2px solid transparent;
+}
 
-  .thumbnail:hover {
-    transform: scale(1.1);
-    border: 2px solid #007bff;
-  }
+.selected, .thumbnail:hover {
+  transform: scale(1.1);
+  border: 2px solid #007bff;
+}
