--- a/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.css
+++ b/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.css
@@ -5,9 +5,9 @@
   font-weight: 500;
 }
 
-.molenImage {
+/*.molenImage {
   border-radius: 20px;
-}
+}*/
 
 .container {
   max-width: 100vw;
@@ -30,10 +30,10 @@
   padding: 10px;
 }
 
-.molenImage {
+/*.molenImage {
   max-width: 100%;
   max-height: 75%;
-}
+}*/
 
 .image-selector {
   margin-top: 20px;
@@ -75,10 +75,10 @@
   float: right;
 }
 
-  .close-btn:hover {
-    background-color: #f44336;
-    color: white;
-  }
+.close-btn:hover {
+  background-color: #f44336;
+  color: white;
+}
 
 .file-input {
   width: 100%;
