--- a/molenapplicatie.client/src/styles.css
+++ b/molenapplicatie.client/src/styles.css
@@ -1,9 +1,15 @@
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+/*Global dialog styling*/
+
 .cdk-overlay-pane.mat-mdc-dialog-panel {
   max-width: 100vw !important;
   max-height: 75vw !important;
-  position:absolute;
-  top:0;
+  position: absolute;
+  top: 0;
 }
 
 .cdk-overlay-pane {
@@ -20,6 +26,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   height: 100%;
   width: 100%;
 }
+
 .cdk-overlay-container {
   position: fixed;
   z-index: 1000;
@@ -90,6 +97,19 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   min-width: inherit;
   max-width: inherit;
   box-shadow: var(--mat-dialog-container-elevation-shadow, 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12));
-  border-radius: 30px !important;
+  border-radius: 25% 10% / 3% 20% !important;
   background-color: var(--mdc-dialog-container-color, var(--mat-app-surface, white));
+}
+
+/*Selected image dialog*/
+
+.selected-image .mat-mdc-dialog-surface {
+  background-color: transparent !important;
+  box-shadow: none;
+  border-radius: 0 !important;
+}
+
+.selected-image .mat-mdc-dialog-surface img {
+  box-shadow: 30px, 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
+  border-radius: 30px 0 0 30px;
 }
