--- a/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.scss
+++ b/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.scss
@@ -1,39 +1,33 @@
 .header {
   border-bottom: 1px solid black;
   font-size: 30px;
-  padding: 8px 30px 8px 80px;
+  padding: 8px 80px 8px 80px;
   font-weight: 500;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-/*.molenImage {
-  border-radius: 20px;
-}*/
-
 .container {
-  max-width: 100vw;
+  width: 70vw;
   display: flex;
   height: 90vh;
 }
 
 .data-left {
-  width: 30%;
+  width: 40%;
   padding: 10px;
 }
 
 .data-right {
-  width: 40%;
+  width: 30%;
   padding: 10px;
 }
 
 .molen-data {
-  width: 40%;
+  width: 30%;
   padding: 10px;
 }
-
-/*.molenImage {
-  max-width: 100%;
-  max-height: 75%;
-}*/
 
 .image-selector {
   margin-top: 20px;
@@ -80,6 +74,35 @@
   color: white;
 }
 
+/*File input*/
+
+.file-input-container {
+  display: inline-block;
+  position: relative;
+}
+
 .file-input {
-  width: 100%;
+  display: none;
+}
+
+.file-label {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.file-label:hover {
+  background-color: #45a049;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+}
+
+.file-label:active {
+  background-color: #388E3C;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
