--- a/molenapplicatie.client/src/styles.scss
+++ b/molenapplicatie.client/src/styles.scss
@@ -113,3 +113,62 @@ body {
   box-shadow: 30px, 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
   border-radius: 30px 0 0 30px;
 }
+
+/*Close button*/
+
+.container-close-btn {
+  position: relative;
+  width: fit-content;
+  display: flex;
+}
+
+.circle {
+  width: 50px;
+  height: 50px;
+  background-color: white;
+  border-radius: 25px;
+  margin: auto;
+  box-shadow: 1px 1px 1px #565656;
+  position: relative;
+  transition: all .2s;
+
+  &:hover {
+    background-color: darken(black, 10%);
+    cursor: pointer;
+  }
+
+  &:hover > .one {
+    height: 45px;
+    top: 3px;
+    transition: all .5s;
+    background-color: white;
+  }
+
+  &:hover > .two {
+    height: 45px;
+    top: 3px;
+    transition: all .5s;
+    background-color: white;
+  }
+}
+
+.line {
+  height: 20px;
+  width: 3px;
+  border-radius: 2px;
+  background-color: darken(black, 20%);
+  position: absolute;
+  transition: all .5s;
+}
+
+.one {
+  top: 15px;
+  left: 23px;
+  transform: rotate(45deg)
+}
+
+.two {
+  top: 15px;
+  left: 23px;
+  transform: rotate(-45deg)
+}
