Fixed when image is deleted and added that the image is added and deleted inside the dialog

--- a/molenapplicatie.client/src/app/confirmation-dialog/confirmation-dialog.component.html
+++ b/molenapplicatie.client/src/app/confirmation-dialog/confirmation-dialog.component.html
@@ -5,7 +5,7 @@
     <input type="text" name="password" [(ngModel)]="APIKey" />
     <div class="dialog-actions">
       <button class="confirm_btn" (click)="confirm()">Yes</button>
-      <button class="deny_btn" (click)="onClose(false)">No</button>
+      <button class="deny_btn" (click)="onClose()">No</button>
     </div>
   </div>
 </div>
