--- a/molenapplicatie.client/src/app/image-dialog/image-dialog.component.scss
+++ b/molenapplicatie.client/src/app/image-dialog/image-dialog.component.scss
@@ -1,17 +1,25 @@
+@import '../../Utils/Variables.scss';
+
 .selectedImage {
   height: 95vh;
   overflow: hidden;
   display: flex;
 }
-.selectedImage img{
-    height:100%;
+
+.selectedImage img {
+  height: fit-content;
+  max-height: 100%;
+  max-width: 60vw;
+  box-shadow: 30px, 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
+  border-radius: 30px 0 0 30px;
 }
+
 .button-container {
   border-radius: 0 30px 30px 0;
   background-color: white;
   height: fit-content;
-  background-color:transparent;
-  display:flex;
+  background-color: transparent;
+  display: flex;
 }
 
 .image-buttons {
@@ -35,7 +43,7 @@
 .btn {
   border: none;
   color: white;
-  width:100%;
+  width: 100%;
   padding: 24px 60px;
   cursor: pointer;
   font-size: 12px;
@@ -50,6 +58,53 @@
   background-color: RoyalBlue;
 }
 
-.container-close-btn{
-    margin-left:50px;
+.container-close-btn {
+  margin-left: 50px;
+}
+
+@media only screen and (max-width: $Media_width) {
+  .selectedImage {
+    display: block;
+  }
+
+  .download_btn, .deleteButton {
+    border-radius: 0;
+    width: 100%;
+  }
+
+  .deleteButton {
+    border-radius: 30px 30px 0 0;
+  }
+
+  .selectedImage img {
+    height: fit-content;
+    max-height: 100%;
+    max-width: 95vw;
+    border-radius: 0 0 30px 30px;
+  }
+
+  .selectedImage {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .button-container {
+    order: -1;
+  }
+
+  .button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    width: 100%;
+    border-radius: 30px 30px 0 0;
+  }
+
+  .container-close-btn {
+    align-self: center;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
 }
