--- a/molenapplicatie.client/src/app/image-selector/image-selector.component.scss
+++ b/molenapplicatie.client/src/app/image-selector/image-selector.component.scss
@@ -6,13 +6,13 @@
 
 .main-image {
   margin-bottom: 16px;
-  height: 80%;
+  height:72vh;
 }
 
 .main-image img {
   width: 100%;
   height: auto;
-  max-height: 75vh;
+  max-height: 100%;
   padding:2px;
   cursor:pointer;
 }
