--- a/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.scss
+++ b/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.scss
@@ -1,7 +1,9 @@
+@import '../../Utils/Variables.scss';
+
 .header {
   border-bottom: 1px solid black;
   font-size: 30px;
-  padding: 8px 80px 8px 80px;
+  padding: 8px 6% 8px 6%;
   font-weight: 500;
   display: flex;
   justify-content: space-between;
@@ -105,4 +107,17 @@
 .file-label:active {
   background-color: #388E3C;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+@media only screen and (max-width: $Media_width) {
+  .container {
+    width: 95vw;
+    display:block;
+  }
+  .data{
+      width:90%;
+  }
+  .data-right{
+      padding-bottom:50px;
+  }
 }
