--- a/molenapplicatie.client/src/app/app.component.scss
+++ b/molenapplicatie.client/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import '../Utils/Variables.scss';
+
 .container, header {
   margin: auto;
   width: 80%;
@@ -6,3 +8,11 @@
   height: 80vh;
 }
 
+@media only screen and (max-width: $Media_width) {
+  .container, header {
+    width: 85%;
+  }
+  .container {
+    height: 88vh;
+  }
+}
