--- a/molenapplicatie.client/src/styles.scss
+++ b/molenapplicatie.client/src/styles.scss
@@ -1,3 +1,5 @@
+@import 'Utils/Variables.scss';
+
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
@@ -7,7 +9,7 @@ body {
 
 .cdk-overlay-pane.mat-mdc-dialog-panel {
   max-width: 100vw !important;
-  max-height: 75vw !important;
+  max-height: 95vh !important;
   position: absolute;
   top: 0;
 }
@@ -109,11 +111,6 @@ body {
   border-radius: 0 !important;
 }
 
-.selected-image .mat-mdc-dialog-surface img {
-  box-shadow: 30px, 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
-  border-radius: 30px 0 0 30px;
-}
-
 /*Close button*/
 
 .container-close-btn {
@@ -171,4 +168,17 @@ body {
   top: 15px;
   left: 23px;
   transform: rotate(-45deg)
+}
+
+
+/*toasts*/
+
+#toast-container {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 10px;
+  z-index: 9999;
 }
