Can change view of map inside map.component

--- a/molenapplicatie.client/src/app/app.component.html
+++ b/molenapplicatie.client/src/app/app.component.html
@@ -1,6 +1,7 @@
 <header>
   <h2>Buurman en Buurman molens</h2>
+  <button (click)="test()">xxxxx</button>
 </header>
 <div class="container">
-  <app-map></app-map>
+  <app-map [(map)]="map"></app-map>
 </div>
