--- a/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.html
+++ b/molenapplicatie.client/src/app/molen-dialog/molen-dialog.component.html
@@ -17,7 +17,7 @@
   </div>
   <div class="data molen-data">
     <h2>Details</h2>
-    <p><strong>Type:</strong> {{ molen.functie }}</p>
+    <p><strong>Functie:</strong> {{ molen.functie }}</p>
     <p><strong>Ten Brugge Nr:</strong> {{ molen.ten_Brugge_Nr }}</p>
     <p><strong>Plaats:</strong> {{ molen.plaats }}</p>
     <p><strong>Adres:</strong> {{ molen.adres }}</p>
