--- a/molenapplicatie.client/src/app/app.component.html
+++ b/molenapplicatie.client/src/app/app.component.html
@@ -1,6 +1,8 @@
 <header>
   <h2>Buurman en Buurman molens</h2>
   <button (click)="test()">xxxxx</button>
+  <button (click)="updateMolens()">Update molens</button>
+  <button>Zoek voor nieuwe molens</button>
 </header>
 <div class="container">
   <app-map [(map)]="map"></app-map>
