--- a/molenapplicatie.client/src/app/app.component.scss
+++ b/molenapplicatie.client/src/app/app.component.scss
@@ -5,7 +5,7 @@
   width: 80%;
 }
 .container {
-  height: 80vh;
+  height: 90vh;
 }
 
 @media only screen and (max-width: $Media_width) {
@@ -14,5 +14,107 @@
   }
   .container {
     height: 88vh;
+    margin-top:50px
+  }
+}
+
+.topInfo {
+  overflow: hidden;
+  background-color: white;
+  position: relative; /* Keep it relative by default */
+  transition: all 0.3s ease;
+  z-index: 1;
+}
+
+.topInfo span{
+    font-size:35px;
+
+}
+
+.topInfo div {
+  background-color: grey;
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  cursor: pointer;
+}
+
+.topInfo div:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topInfo div.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topInfo .icon {
+  display: none;
+  background-color:grey;
+}
+
+@media screen and (max-width: $Media_width) {
+  .topInfo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    max-height: 50px;
+    z-index: 901;
+  }
+
+  .topInfo.responsive {
+    background-color: grey;
+    max-height: 300px;
+  }
+
+  .topInfo span{
+      margin:auto;
+      text-align:center;
+      line-height:50px;
+      max-width:70vw;
+      font-size:17px;
+  }
+
+  .topInfo div:not(:first-child) {
+    display: none;
+  }
+
+  .topInfo.responsive div {
+    border-top: solid 1px black;
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .topInfo div.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: $Media_width) {
+  .topInfo.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+}
+
+.ErrorDiv {
+  background-color: black;
+  height: 100vh;
+  text-align: center;
+  font-size: 50px;
+  color: white;
+
+  img {
+    height: 90vh;
   }
 }
