--- a/molenapplicatie.client/src/app/toast/toast.component.html
+++ b/molenapplicatie.client/src/app/toast/toast.component.html
@@ -1,9 +1,30 @@
-<div *ngIf="type" class="toast {{isVisible ? 'show' : ''}}" [ngClass]="type" (mouseenter)="pauseTimer()" (mouseleave)="resumeTimer()" (click)="close()">
-  <img *ngIf="type == ToastType.Error" src="Assets/Background/Buurman-en-Buurman-Error.png" alt="Alternate Text" />
-  <img *ngIf="type == ToastType.Success" src="Assets/Background/Buurman-en-Buurman-Success.png" alt="Alternate Text" />
+<div *ngIf="type && type != ToastType.Error" class="toast {{isVisible ? 'show' : ''}} '{{type}}'" [ngClass]="type" (mouseenter)="pauseTimer()" (mouseleave)="resumeTimer()" (click)="close()">
+  <!--<img *ngIf="type == ToastType.Error" src="Assets/Toasts/Buurman-en-Buurman-Error.png" alt="Alternate Text" />-->
+  <img *ngIf="type == ToastType.Success" src="Assets/Toasts/Buurman-en-Buurman-Success.png" alt="Alternate Text" />
+  <img *ngIf="type == ToastType.Warning" src="Assets/Toasts/Buurman-en-Buurman-Warning.png" alt="Alternate Text" />
+  <img *ngIf="type == ToastType.Info" src="Assets/Toasts/Buurman-en-Buurman-Info.png" alt="Alternate Text" />
   <div *ngIf="title" class="information">
     <strong>{{ title }}</strong>
     <span>{{ message }}</span>
   </div>
   <span *ngIf="!title">{{ message }}</span>
 </div>
+
+<div *ngIf="type && type == ToastType.Error && random_error == 0" class="toast toast1 {{isVisible ? 'show' : ''}}" [ngClass]="type" (mouseenter)="pauseTimer()" (mouseleave)="resumeTimer()" (click)="close()">
+  <img src="Assets/Toasts/Buurman-en-Buurman-Error.png" alt="Alternate Text" />
+  <div *ngIf="title" class="information">
+    <strong>{{ title }}</strong>
+    <span>{{ message }}</span>
+  </div>
+  <span *ngIf="!title">{{ message }}</span>
+</div>
+
+<div *ngIf="type && type == ToastType.Error && random_error == 1" class="toast toast2 {{isVisible ? 'show' : ''}}" [ngClass]="type" (mouseenter)="pauseTimer()" (mouseleave)="resumeTimer()" (click)="close()">
+  <img src="Assets/Toasts/Buurman-en-Buurman-Error-1_1.png" alt="Alternate Text" />
+  <div *ngIf="title" class="information">
+    <strong>{{ title }}</strong>
+    <span>{{ message }}</span>
+  </div>
+  <span *ngIf="!title">{{ message }}</span>
+  <img src="Assets/Toasts/Buurman-en-Buurman-Error-1_2.png" alt="Alternate Text" />
+</div> 
