--- a/molenapplicatie.client/src/app/app.component.scss
+++ b/molenapplicatie.client/src/app/app.component.scss
@@ -20,15 +20,24 @@
 
 .topInfo {
   overflow: hidden;
-  background-color: white;
+  background-color: transparent;
   position: relative; /* Keep it relative by default */
   transition: all 0.3s ease;
   z-index: 1;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height:60px;
 }
 
-.topInfo span{
-    font-size:35px;
+.topInfo span {
+  font-size: 30px;
+  font-weight: 900;
+  color: #0058A2;
+}
 
+.buurmanEnBuurmanImg{
+    height:100%;
 }
 
 .topInfo div {
@@ -42,16 +51,18 @@
   font-size: 17px;
   transition: background-color 0.3s ease, color 0.3s ease;
   cursor: pointer;
+  border-radius: 10px;
+  margin: 5px;
+  border: 1px solid #535353;
+}
+
+.logo{
+    height:50px;
 }
 
 .topInfo div:hover {
   background-color: #ddd;
   color: black;
-}
-
-.topInfo div.active {
-  background-color: #04AA6D;
-  color: white;
 }
 
 .topInfo .icon {
