--- a/molenapplicatie.client/src/styles.scss
+++ b/molenapplicatie.client/src/styles.scss
@@ -3,12 +3,20 @@
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-image: url('../public/Assets/Background/Light_Wooden_Background.png');
+  background-size: cover;
+}
+
+@media only screen and (max-width: $Media_width) {
+  body {
+    background-size: cover;
+  }
 }
 
 /*Global dialog styling*/
 
 .cdk-overlay-pane.mat-mdc-dialog-panel {
-    z-index:1002;
+  z-index:1002;
   max-width: 100vw !important;
   max-height: 95vh !important;
   position: absolute;
@@ -187,4 +195,31 @@ body {
 
 .leaflet-top.leaflet-left {
   z-index: 900;
+}
+
+
+
+
+
+.gif{
+    position:absolute;
+    bottom:100px;
+    left:0;
+}
+
+
+
+/*molen-details*/
+
+.molen-details .mdc-dialog__container {
+  background-image: url('../public/Assets/Background/pexels-fwstudio-33348-139312.jpg');
+  background-origin: border-box;
+  background-size: cover;
+  border-radius: 25% 10% / 3% 20% !important;
+  color: #ffffff;
+}
+
+.molen-details .mdc-dialog__surface {
+  background-color: rgb(0 0 0 / 30%);
+  border-radius: 25% 10% / 3% 20% !important;
 }
