--- a/molenapplicatie.client/src/app/image-dialog/image-dialog.component.html
+++ b/molenapplicatie.client/src/app/image-dialog/image-dialog.component.html
@@ -4,6 +4,7 @@
     <div class="image-buttons">
       <button class="btn deleteButton" (click)="openDeleteDialog()"><i class="fas fa-trash"></i> Delete</button>
       <button class="btn download_btn" click="downloadImage()"><i class="fa fa-download"></i> Download</button>
+      <img class="gif" src="Assets/Background/Buurman-en-Buurman-anim-paint-200x188-1.gif" alt="Alternate Text" />
     </div>
     <div>
       <div (click)="onClose()" class="container-close-btn">
