--- a/molenapplicatie.client/src/app/image-dialog/image-dialog.component.scss
+++ b/molenapplicatie.client/src/app/image-dialog/image-dialog.component.scss
@@ -62,6 +62,10 @@
   margin-left: 50px;
 }
 
+.gif{
+    margin-top:10vh;
+}
+
 @media only screen and (max-width: $Media_width) {
   .selectedImage {
     display: block;
