--- a/molenapplicatie.client/src/app/app.component.html
+++ b/molenapplicatie.client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header *ngIf="!error">
   <div class="{{visible ? 'responsive' : ''}} topInfo" id="mytopInfo">
     <img class="logo" src="Assets/Background/Buurman-Buurman-logo.webp" alt="Alternate Text" />
-    <span>Molens1</span>
+    <span>Molens</span>
     <div (click)="updateMolens()">Update molens</div>
     <div (click)="searchForNewMolens()">Zoek voor nieuwe molens</div>
     <img class="buurmanEnBuurmanImg" src="Assets/Background/Buurman-Buurman-events.png" alt="Alternate Text" />
