--- a/molenapplicatie.client/src/app/image-dialog/image-dialog.component.html
+++ b/molenapplicatie.client/src/app/image-dialog/image-dialog.component.html
@@ -2,7 +2,7 @@
   <img [src]="data.selectedImage.image" alt="Alternate Text" />
   <div class="button-container">
     <div class="image-buttons">
-      <button class="btn deleteButton" (click)="openDeleteDialog()"><i class="fas fa-trash"></i> Delete</button>
+      <button class="btn {{data.canBeDeleted ? 'deleteButton' : 'deleteButtoDisabled'}}" (click)="openDeleteDialog()"><i class="fas fa-trash"></i> Delete</button>
       <button class="btn download_btn" click="downloadImage()"><i class="fa fa-download"></i> Download</button>
       <img class="gif" src="Assets/Background/Buurman-en-Buurman-anim-paint-200x188-1.gif" alt="Alternate Text" />
     </div>
