--- a/molenapplicatie.client/src/app/confirmation-dialog/confirmation-dialog.component.html
+++ b/molenapplicatie.client/src/app/confirmation-dialog/confirmation-dialog.component.html
@@ -1,8 +1,9 @@
 <div class="confirmation-dialog">
   <header>{{ data.title }}</header>
   <div class="content-container">
-    <span>{{ data.message }}</span><br/>
-    <input type="text" name="password" [(ngModel)]="APIKey" />
+    <span>{{ data.message }}</span><br /><br />
+    <label for="password">Api token</label>
+    <input class="api_input" type="text" name="password" [(ngModel)]="APIKey" />
     <div class="dialog-actions">
       <button class="confirm_btn" (click)="confirm()">Yes</button>
       <button class="deny_btn" (click)="onClose()">No</button>
