--- a/molenapplicatie.client/src/app/app.component.html
+++ b/molenapplicatie.client/src/app/app.component.html
@@ -1,21 +1,21 @@
+<app-loader *ngIf="status == InitializeDataStatus.Initial || isLoading"></app-loader>
+
 <header *ngIf="!error">
   <div class="{{visible ? 'responsive' : ''}} topInfo" id="mytopInfo">
-    <img class="logo" src="Assets/Background/Buurman-Buurman-logo.webp" alt="Alternate Text" />
-    <span>Molens</span>
+    <section class="logo-div">
+      <img class="logo" src="Assets/Background/Buurman-Buurman-logo.webp" alt="Alternate Text" />
+      <span>Molens</span>
+    </section>
     <div (click)="updateMolens()">Update molens</div>
     <div (click)="searchForNewMolens()">Zoek voor nieuwe molens</div>
     <img class="buurmanEnBuurmanImg" src="Assets/Background/Buurman-Buurman-events.png" alt="Alternate Text" />
-    <!--<div (click)="test()">test</div>-->
     <div class="icon" (click)="openInfoMenu()">
       <i class="fa fa-bars"></i>
     </div>
   </div>
 </header>
 <div *ngIf="!error" class="container">
-  <app-map [(map)]="map" [(error)]="error"></app-map>
+  <app-map [(map)]="map" [(error)]="error" [(status)]="status"></app-map>
 </div>
 
-<div *ngIf="error" class="ErrorDiv">
-  <span>De molens kunnen niet gevonden worden!</span> <br/>
-  <img src="Assets/Background/Error.png" alt="Alternate Text" />
-</div>
+<app-error-message *ngIf="error">app-error-message</app-error-message>
