--- a/molenapplicatie.client/src/app/app.component.scss
+++ b/molenapplicatie.client/src/app/app.component.scss
@@ -34,6 +34,7 @@
   font-size: 30px;
   font-weight: 900;
   color: #0058A2;
+  /*height:50px;*/
 }
 
 .buurmanEnBuurmanImg{
@@ -60,6 +61,12 @@
     height:50px;
 }
 
+.logo-div {
+  display: flex; /* Flexbox layout */
+  align-items: center; /* Vertically center the content */
+  justify-content: center; /* Horizontally center the content */
+}
+
 .topInfo div:hover {
   background-color: #ddd;
   color: black;
@@ -70,62 +77,66 @@
   background-color:grey;
 }
 
+.topInfo div:not(:last-child) {
+  display: none;
+}
+
 @media screen and (max-width: $Media_width) {
+  .container{
+      margin-top:70px;
+  }
+
   .topInfo {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    max-height: 50px;
+    height: 60px; /* Allow height to adjust */
     z-index: 901;
   }
 
   .topInfo.responsive {
-    background-color: grey;
-    max-height: 300px;
+    flex-direction: column; /* Stack items vertically on smaller screens */
+    background-color: gray;
+    height: auto; /* Let the height expand based on content */
   }
 
-  .topInfo span{
-      margin:auto;
-      text-align:center;
-      line-height:50px;
-      max-width:70vw;
-      font-size:17px;
-  }
-
-  .topInfo div:not(:first-child) {
-    display: none;
-  }
-
-  .topInfo.responsive div {
+  .topInfo.responsive div:not(:last-child) {
     border-top: solid 1px black;
     float: none;
     display: block;
-    text-align: left;
+    text-align: center;
+    width: 100%; /* Make sure divs take full width */
+    margin:0;
   }
 
   .topInfo div.icon {
     float: right;
     display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
   }
-}
 
-@media screen and (max-width: $Media_width) {
+  .topInfo span {
+    margin: auto;
+    text-align: center;
+    line-height: 50px;
+    max-width: 70vw;
+    font-size: 17px;
+  }
+
   .topInfo.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
-}
 
-.ErrorDiv {
-  background-color: black;
-  height: 100vh;
-  text-align: center;
-  font-size: 50px;
-  color: white;
+  .buurmanEnBuurmanImg {
+    display: none;
+  }
 
-  img {
-    height: 90vh;
+  .topInfo .logo-div {
+    height: 60px;
   }
 }
