--- a/molenapplicatie.client/src/app/app.component.scss
+++ b/molenapplicatie.client/src/app/app.component.scss
@@ -1,4 +1,4 @@
-@import '../Utils/Variables.scss';
+/*@import '../Utils/Variables.scss';
 
 .container, header {
   margin: auto;
@@ -21,8 +21,8 @@
 .topInfo {
   overflow: hidden;
   background-color: transparent;
-  position: relative; /* Keep it relative by default */
-  transition: all 0.3s ease;
+  position: relative;*/ /* Keep it relative by default */
+  /*transition: all 0.3s ease;
   z-index: 1;
   justify-content: center;
   align-items: center;
@@ -33,9 +33,9 @@
 .topInfo span {
   font-size: 30px;
   font-weight: 900;
-  color: #0058A2;
+  color: #0058A2;*/
   /*height:50px;*/
-}
+/*}
 
 .buurmanEnBuurmanImg{
     height:100%;
@@ -62,10 +62,10 @@
 }
 
 .logo-div {
-  display: flex; /* Flexbox layout */
-  align-items: center; /* Vertically center the content */
-  justify-content: center; /* Horizontally center the content */
-}
+  display: flex;*/ /* Flexbox layout */
+  /*align-items: center;*/ /* Vertically center the content */
+  /*justify-content: center;*/ /* Horizontally center the content */
+/*}
 
 .topInfo div:hover {
   background-color: #ddd;
@@ -77,11 +77,10 @@
   background-color:grey;
 }
 
-.topInfo div:not(:last-child) {
-  display: none;
-}
-
 @media screen and (max-width: $Media_width) {
+  .topInfo div:not(:last-child) {
+    display: none;
+  }
   .container{
       margin-top:70px;
   }
@@ -91,23 +90,205 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 60px; /* Allow height to adjust */
-    z-index: 901;
+    height: 60px;*/ /* Allow height to adjust */
+    /*z-index: 901;
   }
 
   .topInfo.responsive {
-    flex-direction: column; /* Stack items vertically on smaller screens */
-    background-color: gray;
-    height: auto; /* Let the height expand based on content */
-  }
+    flex-direction: column;*/ /* Stack items vertically on smaller screens */
+    /*background-color: gray;
+    height: auto;*/ /* Let the height expand based on content */
+  /*}
 
   .topInfo.responsive div:not(:last-child) {
     border-top: solid 1px black;
     float: none;
     display: block;
     text-align: center;
-    width: 100%; /* Make sure divs take full width */
-    margin:0;
+    width: 100%;*/ /* Make sure divs take full width */
+    /*margin:0;
+  }
+
+  .topInfo div.icon {
+    float: right;
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topInfo span {
+    margin: auto;
+    text-align: center;
+    line-height: 50px;
+    max-width: 70vw;
+    font-size: 17px;
+  }
+
+  .topInfo.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .buurmanEnBuurmanImg {
+    display: none;
+  }
+
+  .topInfo .logo-div {
+    height: 60px;
+  }
+}*/
+
+
+
+@import '../Utils/Variables.scss';
+
+.container {
+  margin: auto;
+  width: 95%;
+}
+
+header, .mapContainer {
+  margin: auto;
+  width: 85%;
+}
+
+.container, .mapContainer {
+  height: 90vh;
+}
+
+@media only screen and (max-width: $Media_width) {
+  .container, header {
+    width: 85%;
+  }
+
+  .container {
+    height: 88vh;
+    margin-top: 50px
+  }
+}
+
+.container {
+  color: #0058A2;
+  display: flex;
+}
+
+
+.topInfo {
+  overflow: hidden;
+  background-color: transparent;
+  position: relative;
+  transition: all 0.3s ease;
+  z-index: 1;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  height: 60px;
+}
+
+.topInfo span {
+  font-size: 30px;
+  font-weight: 900;
+  color: #0058A2;
+  height:50px;
+}
+
+.buurmanEnBuurmanImg {
+  height: 100%;
+}
+
+.topInfo .topButton, .topInfo .icon {
+  float: right;
+}
+
+.topInfo .topButton, .topInfo .icon, .allButtons .topButton {
+  background-color: grey;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+  cursor: pointer;
+  border-radius: 10px;
+  margin: 5px;
+  border: 1px solid #535353;
+}
+
+.logo {
+  height: 50px;
+}
+
+.logo-div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.topInfo .topButton:hover, .allButtons .topButton:hover{
+  background-color: #ddd;
+  color: black;
+}
+
+.topInfo .icon {
+  display: none;
+  background-color: grey;
+}
+
+@media screen and (max-width: $Media_width) {
+  .topInfo .placeSearch {
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    margin: 5px;
+  }
+
+  .topInfo .topButton:not(:last-child), .topInfo .placeSearch, .topInfo .placeSearch, .container .allButtons{
+    display: none;
+  }
+
+  .container {
+      width:100%;
+    margin-top: 70px;
+  }
+
+  .topInfo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60px;
+    z-index: 901;
+  }
+
+  .topInfo.responsive {
+    flex-direction: column;
+    background-color: gray;
+    height: auto;
+  }
+
+  .topInfo.responsive .placeSearch {
+    border:none;
+    float: none;
+    display: block;
+    text-align: center;
+    width: 100%;
+    margin: 0;
+  }
+
+  .topInfo.responsive .topButton:not(:last-child) {
+    border-top: solid 1px black;
+    float: none;
+    display: block;
+    text-align: center;
+    width: 100%;
+    margin: 0;
   }
 
   .topInfo div.icon {
