--- a/molenapplicatie.client/src/app/confirmation-dialog/confirmation-dialog.component.html
+++ b/molenapplicatie.client/src/app/confirmation-dialog/confirmation-dialog.component.html
@@ -2,8 +2,8 @@
   <header>{{ data.title }}</header>
   <div class="content-container">
     <span>{{ data.message }}</span><br /><br />
-    <label for="password">Api token</label>
-    <input class="api_input" type="text" name="password" [(ngModel)]="APIKey" />
+    <span *ngIf="data.api_key_usage">Api token</span>
+    <input *ngIf="data.api_key_usage" class="api_input" type="text" name="username" [(ngModel)]="APIKey" autocomplete="off"/>
     <div class="dialog-actions">
       <button class="confirm_btn" (click)="confirm()">Yes</button>
       <button class="deny_btn" (click)="onClose()">No</button>
