--- a/molenapplicatie.client/src/styles.scss
+++ b/molenapplicatie.client/src/styles.scss
@@ -211,3 +211,7 @@ body {
   background-color: rgb(0 0 0 / 30%);
   border-radius: 25% 10% / 3% 20% !important;
 }
+
+.molen-details .mdc-dialog__surface {
+  overflow: hidden;
+}
