Scrollable image details for phone

--- a/molenapplicatie.client/src/styles.scss
+++ b/molenapplicatie.client/src/styles.scss
@@ -215,3 +215,9 @@ body {
 .molen-details .mdc-dialog__surface {
   overflow: hidden;
 }
+
+@media only screen and (max-width: $Media_width) {
+  .molen-details .mdc-dialog__surface {
+    overflow-y: scroll;
+  }
+}
