--- a/molenapplicatie.client/src/app/app.component.html
+++ b/molenapplicatie.client/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!--<app-loader class="loading {{isLoadingVisible ? 'loadingVisible' : 'loadingNotVisible'}}" *ngIf="status == InitializeDataStatus.Initial || isLoading"></app-loader>-->
-<app-loader [isLoading]="isLoading" [isLoadingVisible]="isLoadingVisible"></app-loader>
+<app-loader [isLoadingVisible]="isLoadingVisible"></app-loader>
 
 <header *ngIf="!error">
   <div class="{{visible ? 'responsive' : ''}} topInfo" id="mytopInfo">
